--- a/trump-alarm/Info.plist
+++ b/trump-alarm/Info.plist
@@ -17,11 +17,13 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1</string>
+	<string>1.2</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Gotta get that pic of you voting!</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Let's get that pic of your voting self!</string>
 	<key>UILaunchStoryboardName</key>
