--- a/trump-alarm/Info.plist
+++ b/trump-alarm/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location Plzzzz</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -25,7 +27,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>Gotta get that pic of you voting!</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Let's get that pic of your voting self!</string>
+	<string>Let&apos;s get that pic of your voting self!</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
