--- a/trump-alarm/Info.plist
+++ b/trump-alarm/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>The Trump Alarm will customize your alarms based on the hours your particular polling place is open.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -19,15 +17,17 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2</string>
+	<string>1.3</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>Let&apos;s get that pic of your voting self!</string>
+	<string>Let's get that pic of your voting self!</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>The Trump Alarm will customize your alarms based on the hours your particular polling place is open.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Let&apos;s get that pic of your voting self!</string>
+	<string>Let's get that pic of your voting self!</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
