--- a/trump-alarm/Info.plist
+++ b/trump-alarm/Info.plist
@@ -17,19 +17,17 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3</string>
+	<string>1.9</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>Let's get that pic of your voting self!</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>The Trump Alarm will customize your alarms based on the hours your particular polling place is open.</string>
+	<string>Gotta get that pic of you voting!</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Let's get that pic of your voting self!</string>
 	<key>UILaunchStoryboardName</key>
-	<string>TrumpLaunch</string>
+	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -47,5 +45,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>The Trump Alarm will customize your alarms based on the hours your particular polling place is open.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Let&apos;s get that pic of your voting self!</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>The Trump Alarm will customize your alarms based on the hours your particular polling place is open.</string>
 </dict>
 </plist>
